--- a/GUI/pom.xml
+++ b/GUI/pom.xml
@@ -16,5 +16,10 @@
       <artifactId>HibernateApp</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.formdev</groupId>
+      <artifactId>flatlaf-intellij-themes</artifactId>
+      <version>3.0</version>
+    </dependency>
   </dependencies>
 </project>
