--- a/HibernateApp/pom.xml
+++ b/HibernateApp/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>oracle-r2dbc</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
